--- a/subprocess/dockerfile
+++ b/subprocess/dockerfile
@@ -1,5 +1,25 @@
-# Use an official Python runtime as a parent image
-FROM python:3.8-slim-buster
+FROM ubuntu:latest
+
+# Update the package list and install basic utilities
+RUN apt-get update && apt-get install -y \
+    curl \
+    wget \
+    build-essential \
+    software-properties-common
+
+# Install Python
+RUN apt-get install -y python3 python3-pip
+
+# Install Node.js
+RUN curl -sL https://deb.nodesource.com/setup_14.x | bash -
+RUN apt-get install -y nodejs
+
+# Install C and C++ compilers
+RUN apt-get install -y gcc g++ make
+
+# Clean up
+RUN apt-get clean && rm -rf /var/lib/apt/lists/*
+
 
 # Set the working directory to /app
 WORKDIR /app
