--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,5 +1,5 @@
 # Use an official Python runtime as a parent image
-FROM python:3.8-slim-buster
+FROM python:3
 
 # Set the working directory to /app
 WORKDIR /app
@@ -12,9 +12,6 @@ RUN pip install --trusted-host pypi.python.org -r requirements.txt
 
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
-
-# Define environment variable
-ENV NAME World
 
 # Run app.py when the container launches
 CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
