--- a/api/dockerfile
+++ b/api/dockerfile
@@ -1,17 +1,20 @@
 # Use an official Python runtime as a parent image
-FROM python:3
+FROM python:3.10
+
+ENV PYTHONUNBUFFERED=1
 
 # Set the working directory to /app
-WORKDIR /app
+WORKDIR /code
 
 # Copy the current directory contents into the container at /app
-COPY . /app
+COPY requirements.txt .
 
 # Install any needed packages specified in requirements.txt
-RUN pip install --trusted-host pypi.python.org -r requirements.txt
+RUN pip install -r requirements.txt
 
+COPY . .
 # Make port 8000 available to the world outside this container
 EXPOSE 8000
 
 # Run app.py when the container launches
-CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+CMD ["python", "manage.py", "runserver","0.0.0.0:8000"]
