--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,32 +1,99 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: admin
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: admin
+  template:
+    metadata:
+      labels:
+        app: admin
+    spec:
+      containers:
+      - name: admin
+        image: venkysvr/admin
+        ports:
+        - containerPort: 8000
+---
 apiVersion: v1
 kind: Service
 metadata:
-  name: app
+  name: admin-service
 spec:
+  type: NodePort
   selector:
-    app: app
+    app: admin
   ports:
-  - port: 3000
+    - name: http
+      targetPort: 8000
+      port: 31000
+      nodePort: 31000
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: app
+  name: client
 spec:
+  replicas: 3
   selector:
     matchLabels:
-      app: app
+      app: client
   template:
     metadata:
       labels:
-        app: app
+        app: client
     spec:
       containers:
-      - name: app
-        image: venkysvr/app
-        resources:
-          limits:
-            memory: "128Mi"
-            cpu: "500m"
+      - name: client
+        image: venkysvr/client
         ports:
         - containerPort: 3000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client-service
+spec:
+  type: NodePort
+  selector:
+    app: client
+  ports:
+    - name: http
+      targetPort: 3000
+      port: 32000
+      nodePort: 32000
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: compiler
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: compiler
+  template:
+    metadata:
+      labels:
+        app: compiler
+    spec:
+      containers:
+      - name: compiler
+        image: venkysvr/compiler
+        ports:
+        - containerPort: 5000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: compiler-service
+spec:
+  selector:
+    app: compiler
+  ports:
+    - name: http
+      targetPort: 5000
+      port: 5000
