--- a/deploy.yaml
+++ b/deploy.yaml
@@ -14,7 +14,8 @@ spec:
     spec:
       containers:
       - name: admin
-        image: venkysvr/admin
+        image: venkysvr/admin:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 8000
 ---
@@ -48,7 +49,8 @@ spec:
     spec:
       containers:
       - name: client
-        image: venkysvr/client
+        image: venkysvr/client:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000
 ---
@@ -82,7 +84,8 @@ spec:
     spec:
       containers:
       - name: compiler
-        image: venkysvr/compiler
+        image: venkysvr/compiler:latest
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
 ---
