--- a/deploy.yaml
+++ b/deploy.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: admin
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: admin
@@ -15,9 +15,20 @@ spec:
       containers:
       - name: admin
         image: venkysvr/admin:latest
-        imagePullPolicy: Always
         ports:
         - containerPort: 8000
+        readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          imagePullPolicy: IfNotPresent
+      strategy:
+        type: RollingUpdate
+        rollingUpdate:
+          maxUnavailable: 1
+          maxSurge: 1
 ---
 apiVersion: v1
 kind: Service
@@ -38,7 +49,7 @@ kind: Deployment
 metadata:
   name: client
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: client
@@ -50,9 +61,20 @@ spec:
       containers:
       - name: client
         image: venkysvr/client:latest
-        imagePullPolicy: Always
         ports:
         - containerPort: 3000
+        readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          imagePullPolicy: IfNotPresent
+      strategy:
+        type: RollingUpdate
+        rollingUpdate:
+          maxUnavailable: 1
+          maxSurge: 1        
 ---
 apiVersion: v1
 kind: Service
@@ -73,7 +95,7 @@ kind: Deployment
 metadata:
   name: compiler
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
       app: compiler
@@ -85,9 +107,20 @@ spec:
       containers:
       - name: compiler
         image: venkysvr/compiler:latest
-        imagePullPolicy: Always
         ports:
         - containerPort: 5000
+        readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
+          imagePullPolicy: IfNotPresent
+      strategy:
+        type: RollingUpdate
+        rollingUpdate:
+          maxUnavailable: 1
+          maxSurge: 1
 ---
 apiVersion: v1
 kind: Service
