--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,7 +15,7 @@ spec:
       containers:
       - name: admin
         image: venkysvr/admin:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 8000
 ---
@@ -50,7 +50,7 @@ spec:
       containers:
       - name: client
         image: venkysvr/client:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 3000     
 ---
@@ -85,7 +85,7 @@ spec:
       containers:
       - name: compiler
         image: venkysvr/compiler:latest
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         ports:
         - containerPort: 5000
 ---
